--- a/movies-explorer-frontend/src/components/App/App.css
+++ b/movies-explorer-frontend/src/components/App/App.css
@@ -3,4 +3,7 @@
   background-color: #202020;
   color: #fff;
   position: relative;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
