--- a/movies-explorer-frontend/src/components/Header/Header.css
+++ b/movies-explorer-frontend/src/components/Header/Header.css
@@ -34,6 +34,7 @@
 .header__nav {
     display: flex;
     align-items: center;
+    margin-left: 50px;
 }
 
 .header__links {
@@ -82,6 +83,10 @@
     outline: none;
     background-color: transparent;
     transition: all 0.2s ease-in-out;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .header__btn:hover {
@@ -96,7 +101,6 @@
 }
 
 .header__btn_type-login {
-    font-weight: 400;
     width: 76px;
     height: 32px;
     font-size: 12px;
