--- a/movies-explorer-frontend/src/components/SearchForm/SearchForm.css
+++ b/movies-explorer-frontend/src/components/SearchForm/SearchForm.css
@@ -137,6 +137,11 @@
     border-radius: 3px;
     border-style: none;
     margin-left: 10px;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .search-form__btn:hover {
+    opacity: 0.7;
   }
   
   .search-form__error {
