--- a/movies-explorer-frontend/src/components/MoviesCard/MoviesCard.css
+++ b/movies-explorer-frontend/src/components/MoviesCard/MoviesCard.css
@@ -1,9 +1,7 @@
 .movies-card {
     box-sizing: border-box;
     list-style: none;
-    background-color: #222222;
     border-radius: 6px;
-    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
     padding-bottom: 18px;
   }
   
@@ -19,6 +17,7 @@
     justify-content: space-between;
     padding: 16px 18px 0;
     margin-bottom: 18px;
+    position: relative;
   }
   
   @media (max-width: 500px) {
@@ -48,9 +47,16 @@
   
   .movies-card__duration {
     margin: 0;
-    font-size: 13px;
     line-height: 1.38;
     color: #8b8b8b;
+    box-sizing: border-box;
+    background-color: #2F2F2F;
+    width: fit-content;
+    height: 18px;
+    border-radius: 3px;
+    padding: 0 4px;
+    font-size: 11px;
+    font-weight: 400;
   }
   
   @media (max-width: 500px) {
@@ -84,20 +90,33 @@
     display: flex;
     justify-content: center;
   }
-  
-  .movies-card__btn_type_gray {
-    background-color: #313131;
-  }
-  
-  .movies-card__btn_type_red {
-    background-color: #ee3465;
-  }
 
   .movies-card__btn {
     border-radius: 30px;
-    padding: 0;
-    width: 100px;
-    height: 29px;
-    font-size: 12px;
-    line-height: 0.91;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 9px;
+    position: absolute;
+    top: 28px;
+    right: 28px;
+    color: white;
+    width: 72px;
+    height: 21px;
+    background-color: #313131;
+    pointer-events: all;
+    cursor: pointer;
+    border: none;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .movies-card__btn:hover {
+    opacity: 0.9;
+  }
+
+  .movies-card__btn_type_red {
+    background-image: url('../../images/savedIcon.svg');
+    width: 21px;
+    height: 21px;
+    background-position: center;
+    background-repeat: no-repeat;
   }
