major css tweaks

--- a/movies-explorer-frontend/src/components/Header/Header.css
+++ b/movies-explorer-frontend/src/components/Header/Header.css
@@ -185,3 +185,11 @@
         display: none;
     }
 }
+
+@media (max-width: 320px) {
+    .header__burger {
+        width: 22px;
+        height: 44px;
+        right: 23px;
+    }
+}
