--- a/movies-explorer-frontend/src/components/MoviesCard/MoviesCard.css
+++ b/movies-explorer-frontend/src/components/MoviesCard/MoviesCard.css
@@ -15,23 +15,21 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 16px 18px 0;
-    margin-bottom: 18px;
+    margin-bottom: 15px;
     position: relative;
   }
   
-  @media (max-width: 500px) {
+  @media (max-width: 768px) {
     .movies-card__header {
-      padding: 13px 13px 0;
-      margin-bottom: 13px;
+      margin-bottom: 22px;
     }
   }
   
   .movies-card__title {
     margin: 0;
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 500;
-    line-height: 1.2;
+    line-height: 16px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
@@ -68,9 +66,9 @@
   
   .movies-card__image {
     width: 100%;
-    height: 200px;
-    margin-bottom: 18px;
+    height: 201px;
     object-fit: cover;
+    border-radius: 3px;
   }
   
   @media (max-width: 768px) {
@@ -88,7 +86,15 @@
   
   .movies-card__footer {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
+    margin: auto 14px;
+  }
+
+  @media (max-width: 768px) {
+    .movies-card__footer {
+      margin: auto;
+    }
   }
 
   .movies-card__btn {
@@ -97,8 +103,8 @@
     font-weight: 400;
     line-height: 9px;
     position: absolute;
-    top: 28px;
-    right: 28px;
+    top: 14px;
+    right: 14px;
     color: white;
     width: 72px;
     height: 21px;
