--- a/movies-explorer-frontend/src/components/Footer/Footer.css
+++ b/movies-explorer-frontend/src/components/Footer/Footer.css
@@ -1,22 +1,26 @@
 .footer {
-    padding: 79px 0 20px;
+    padding: 0 0 20px;
     font-size: 13px;
     font-weight: 400;
     line-height: 1.21;
-    margin: auto;
+    margin: 0 70px;
     max-width: calc(100% - 140px);
     flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
   }
   
   @media (max-width: 768px) {
     .footer {
       max-width: calc(100% - 60px);
+      margin: 0 30px;
     }
   }
 
   @media (max-width: 500px) {
     .footer {
       max-width: calc(100% - 20px);
+      margin: 0 10px;
     }
   }
 
@@ -26,11 +30,20 @@
     text-align: center;
     border-bottom: 1px solid #424242;
     padding-bottom: 20px;
+    width: 100%;
   }
   
   @media (max-width: 768px) {
     .footer__text {
+      font-size: 13px;
+    }
+  }
+
+  @media (max-width: 500px) {
+    .footer__text {
       font-size: 12px;
+      padding-bottom: 20px;
+      margin-bottom: 31px;
     }
   }
   
@@ -53,7 +66,7 @@
   
   @media (max-width: 500px) {
     .footer__information {
-      padding-top: 30px;
+      padding-top: 0;
       flex-direction: column-reverse;
       gap: 30px;
     }
