--- a/movies-explorer-frontend/src/components/MoviesCard/MoviesCard.css
+++ b/movies-explorer-frontend/src/components/MoviesCard/MoviesCard.css
@@ -15,16 +15,22 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 15px;
+    margin-bottom: 14px;
     position: relative;
   }
   
   @media (max-width: 768px) {
     .movies-card__header {
-      margin-bottom: 22px;
+      margin-bottom: 24px;
     }
   }
   
+  @media (max-width: 500px) {
+    .movies-card__header {
+      margin-bottom: 4px;
+    }
+  }
+
   .movies-card__title {
     margin: 0;
     font-size: 13px;
@@ -35,7 +41,7 @@
     overflow: hidden;
     flex-basis: 200px;
   }
-  
+
   @media (max-width: 500px) {
     .movies-card__title {
       font-size: 12px;
@@ -68,7 +74,7 @@
     width: 100%;
     height: 201px;
     object-fit: cover;
-    border-radius: 3px;
+    border-radius: 6px;
   }
   
   @media (max-width: 768px) {
@@ -113,6 +119,13 @@
     cursor: pointer;
     border: none;
     transition: all 0.3s ease-in-out;
+  }
+
+  @media (max-width: 500px) {
+    .movies-card__btn {
+      top: 10px;
+      right: 9px;
+    }
   }
 
   .movies-card__btn:hover {
