--- a/movies-explorer-frontend/src/components/RoadMap/RoadMap.css
+++ b/movies-explorer-frontend/src/components/RoadMap/RoadMap.css
@@ -34,7 +34,7 @@
   
   @media (max-width: 768px) {
     .roadmap__time {
-      padding: 9px 10px;
+      padding: 9px 10px 9px 15px;
     }
   }
   
@@ -54,6 +54,12 @@
   .roadmap__title {
     margin: 0;
     color: #8b8b8b;
+  }
+
+  @media (max-width: 768px) {
+    .roadmap__title {
+      margin-left: 7px;
+    }
   }
   
   @media (max-width: 500px) {
