--- a/movies-explorer-frontend/src/components/SearchForm/SearchForm.css
+++ b/movies-explorer-frontend/src/components/SearchForm/SearchForm.css
@@ -4,9 +4,17 @@
     padding-bottom: 40px;
   }
 
+  @media (max-width: 768px) {
+    .app__search-form {
+      margin-bottom: 80px;
+      padding-bottom: 40px;
+    }
+  }
+
   @media (max-width: 500px) {
     .app__search-form {
-      margin-bottom: 91px;
+      margin-bottom: 50px;
+      padding-bottom: 42px;
     }
   }
   
@@ -40,17 +48,26 @@
     background-color: #2f2f2f;
     border-radius: 8px;
     padding-left: 20px;
+    transition: all 0.3s ease-in-out;
+    border: 1px solid #424242;
   }
   
+  .search-form__input:focus {
+    border: 1px solid #3ddc84;
+  }
+
   .search-form__input_disabled {
     color: #565656;
   }
   
   @media (max-width: 500px) {
     .search-form__input {
+      font-size: 14px;
       padding-left: 13px;
       text-align: left;
-      font-size: 18px;
+      margin-left: 4px;
+      margin-top: 3px;
+      height: 45px;
     }
   }
   
@@ -132,10 +149,21 @@
     background-repeat: no-repeat;
     width: 44px;
     height: 44px;
-    border-radius: 3px;
+    border-radius: 7px;
     border-style: none;
     margin-left: 10px;
     transition: all 0.3s ease-in-out;
+    pointer-events: all;
+    cursor: pointer;
+  }
+
+  @media (max-width: 500px) {
+    .search-form__btn {
+      margin-left: 7px;
+      padding-right: 45px;
+      background-color: #202020;
+      margin-top: 3px;
+    }
   }
 
   .search-form__btn:hover {
@@ -154,7 +182,7 @@
 
   @media (max-width: 768px) {
     .search-form__error {
-      margin-bottom: 20px;
+      margin-bottom: 18px;
     }
   }
   
