--- a/movies-explorer-frontend/src/components/SearchForm/SearchForm.css
+++ b/movies-explorer-frontend/src/components/SearchForm/SearchForm.css
@@ -157,7 +157,7 @@
     cursor: pointer;
   }
 
-  @media (max-width: 500px) {
+  @media screen and (max-width: 500px) {
     .search-form__btn {
       margin-left: 7px;
       padding-right: 45px;
@@ -167,7 +167,7 @@
   }
 
   .search-form__btn:hover {
-    opacity: 0.7;
+    opacity: 0.8;
   }
   
   .search-form__error {
