--- a/movies-explorer-frontend/src/components/Movies/Movies.css
+++ b/movies-explorer-frontend/src/components/Movies/Movies.css
@@ -71,3 +71,30 @@
   .movies__footer-btn_type-hidden {
     display: none;
   }
+
+  .movies__message {
+    width: 65%;
+    height: fit-content;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 25px;
+    font-weight: 500;
+  }
+  
+  @media (max-width: 1024px) {
+    .movies__message {
+      font-size: 20px;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .movies__message {
+      font-size: 17px;
+    }
+  }
+  
+  @media (max-width: 500px) {
+    .movies__message {
+      font-size: 13px;
+    }
+  }
