--- a/movies-explorer-frontend/src/components/MoviesCard/MoviesCard.css
+++ b/movies-explorer-frontend/src/components/MoviesCard/MoviesCard.css
@@ -69,7 +69,7 @@
 }
 
 .movie__delete-button {
-  background-image: url(../../images/savedIcon.svg);
+  background-image: url(../../images/deleteIcon.svg);
   width: 20px;
   height: 20px;
 }
