--- a/movies-explorer-frontend/src/components/Preloader/Preloader.css
+++ b/movies-explorer-frontend/src/components/Preloader/Preloader.css
@@ -48,9 +48,6 @@
     z-index: 10;
     padding: 20px;
     box-sizing: border-box;
-    margin-top: 50%;
-    margin-left: auto;
-    margin-right: auto;
   }
   
   .preloader__container {
@@ -63,9 +60,8 @@
     width: 100px;
     height: 100px;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    left: 0;
     background: #3ddc84;
     border-radius: 50px;
   }
