--- a/movies-explorer-frontend/src/components/Navigation/Navigation.css
+++ b/movies-explorer-frontend/src/components/Navigation/Navigation.css
@@ -39,7 +39,7 @@
 
   @media screen and (max-width: 900px) {
     .nav-links {
-      margin-right: 50px;
+      margin-right: 0;
       grid-auto-flow: row;
       text-align: center;
     }
@@ -179,6 +179,12 @@
   .nav-profile:hover,
   .nav-auth__signup:hover {
     opacity: 0.7;
+  }
+
+  @media screen and (max-width: 900px) {
+    .nav-profile {
+      margin-right: 20px;
+    }
   }
 
   @media screen and (max-width: 900px) {
